--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -2,7 +2,9 @@
 
 <html>
 	<head>
-		{{{_sections.title}}}
+		<title>{{ title }}</title>
+		
+        <link rel="stylesheet" type="text/css" href="/icons/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/helpers.css">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
