--- a/views/auctions.hbs
+++ b/views/auctions.hbs
@@ -1,57 +1,40 @@
 <nav class="navbar white">
 	<div class="navbar-left"></div>
 	<div class="navbar-center">
-		<h3>Auction <span class="text-red">IT!</span></h3>
+		<a href="/">
+			<h3>Auction <span class="text-red">IT!</span></h3>
+		</a>
 	</div>
 	<div class="navbar-right f-s-16">
+		<a href="/auctions">Auctions</a>
 		<a href="/logout">Logout</a>
 	</div>
 </nav>
 
 <div class="container white cast-shadow" style="min-height: 85vh;">
-	<form action="" method="POST">
-		<div id="auctionSearch" class="row">
-			<!-- <div class="col-1"></div> -->
+	<form id="auctionSearch" action="/api/auction" method="POST">
+		<div class="row">
+			<div class="col-3"></div>
 			<div class="col-4">
-				<input type="text" name="auctionid" class="form-control" placeholder="Enter auction id" required>
+				<input type="text" name="auctionID" id="auctionID" class="form-control" placeholder="Enter auction id" required>
 			</div>
 			<div class="col-2">
-				<button class="btn red form-control">SEARCH</button>
+				<button type="submit" class="btn red form-control">SEARCH</button>
 			</div>
 		</div>
 	</form>
 
 	<div class="row" style="min-height: 50vh;">
-		<div class="col-7">
-			<h3 class="p-b-10" style="border-bottom: 2px solid #ccc;">All Auctions</h3>
-			{{#if auctions.length}}
-			<ul class="list">
-			{{#each auctions}}
-				<li>
-					<p class="text-black light m-b-10">{{ item }} - {{ itemPrice }}</p>
-					<p class="text-black light">{{ itemDesc }}</p>
-				</li>			
-			{{/each}}
-			</ul>
-			{{else}}
-			<p>There are no auctions scheduled at the moment.</p>
-			{{/if}}
-		</div>
-
-		<div class="col-5 round bordered p-0">
-			<h3 class="red text-white text-center p-t-10 p-b-10 p-l-10 p-r-10">Active</h3>
-			{{#if activeAuctions.length}}
-			<ul class="list">
-			{{#each activeAuctions}}
-				<li>
-					<p class="text-black light m-b-10">{{ item }} - {{ itemPrice }}</p>
-					<p class="text-black light">{{ itemDesc }}</p>
-				</li>			
-			{{/each}}
-			</ul>
-			{{else}}
-			<p class="p-l-10 p-r-10 p-b-20 text-black light">There are no active auctions at the moment.</p>
-			{{/if}}
+		<div class="col-12">
+			<h3 class="text-center">All Auctions</h3>
+			<div class="ruler">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<div id="allAuctions">
+				<!-- Inject list -->
+			</div>
 		</div>
 	</div>
 
@@ -68,18 +51,23 @@
 			<form action="/auctions/create" method="POST">
 				<div class="form-group">
 					<label for="item" class="text-white">What item are you selling ?</label>
-					<br>
+					<br><br>
 					<input type="text" class="form-control" name="item" id="item" required>
 				</div>
 				<div class="form-group">
 					<label for="itemDesc" class="text-white">Describe in detail (<span id="descCount">150</span> chars)</label>
-					<br>
+					<br><br>
 					<textarea id="itemDesc" name="itemDesc" class="form-control" rows="5" cols="40" maxlength="150" required></textarea>
 				</div>
 				<div class="form-group">
-					<label for="itemPrice" class="text-white">Enter base price:</label>
-					<br>
-					<input type="number" class="form-control" name="itemPrice" required>
+					<label for="itemPrice" class="text-white">Enter base price ($):</label>
+					<br><br>
+					<input type="number" class="form-control" name="itemPrice" id="itemPrice" required>
+				</div>
+				<div class="form-group">
+					<label for="period" class="text-white">How long should it run (hours)?</label>
+					<br><br>
+					<input type="number" class="form-control" name="period" id="period" required>
 				</div>
 				<div class="form-group">
 					<button type="submit" class="btn red">CREATE</button>
@@ -88,3 +76,7 @@
 		</div>
 	</div>
 </div>
+
+{{#contentFor 'scripts' }}
+	<script type="text/javascript" src="js/auctions.js"></script>
+{{/contentFor}}
