--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,9 @@
 
 <div class="container white round cast-shadow m-t-20 m-b-20">
 	<h2 class="text-center p-t-20 p-b-10">
-		Auction <span class="text-red">IT!</span>
+		<a href="/" style="text-decoration:none;">
+			<h3 class="text-black">Auction <span class="text-red">IT!</span></h3>
+		</a>
 	</h2>
 	<div class="row">
 		<div class="col-6 p-t-30 p-b-30 text-black text-center light">
